# aris-xyz-platform

./: .gitignore  CMakeLists.txt  README.md
SoftgripperDesign/: 夹片.SLDPRT  转轴.SLDPRT
docs/soft gripper design/: 支柱.SLDPRT  模具.SLDASM  软体手指填充.SLDPRT  软体抓手.SLDASM  连接装置.SLDPRT
include/: T_planner.h  plan.h  robot.h
models/: Fourbar_Linkage_simulation.m  模具.STEP
models/linkage length optimization/: Fourbar_Linkage_simulation.asv  Fourbar_Linkage_simulation.m  Fourbar_linkage_simulation.m  Optimization.asv  Optimization.m  Visualization.asv  Visualization.m  readme.md
models/linkage_length_optimization/: Fourbar_linkage_simulation.m  Visualization.m
models/softgripper/: 平台上.SLDPRT  平台下.SLDPRT  模具.STEP  软体抓手.STEP
softgripper_design/: 模具center.SLDPRT  模具half.SLDPRT  软体手指模具.SLDPRT
src/: T_plan.cpp  T_planner.cpp  T_planner.h  main.cpp  plan.cpp  plan.h  robot.cpp  robot.h  test_plan.cpp
test/: CMakeLists.txt  T_planner_plot.py  test_plan.cpp
